--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,3 +1,2 @@
-<h1>Tops#index</h1>
-<p>Find me in app/views/tops/index.html.erb</p>
-
+<h1>items</h1>
+<%= link_to "アイテム登録", new_item_path ,class: "btn btn-secondary"%>
