--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,2 +1,2 @@
 <h1>items</h1>
-<%= link_to "アイテム登録", new_item_path ,class: "btn btn-secondary"%>
+<%= link_to "アイテム登録", new_give_item_path ,class: "btn btn-secondary"%>
