--- a/app/views/give_persons/index.html.erb
+++ b/app/views/give_persons/index.html.erb
@@ -1,2 +1,30 @@
-<h1>GivePersons#index</h1>
-<p>Find me in app/views/give_persons/index.html.erb</p>
+<h3>アイテム情報一覧</h3>
+<%binding.pry%>
+<% if flash[:notice] %>
+<p class="notice"><%= flash[:notice] %></p>
+<% end %>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-auto mx-5">
+      <table class="table table-hover">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">名前</th>
+            <th scope="col">つながり</th>
+            <th scope="col">登録日</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @give_persons.each do |give_person| %>
+          <tr>
+            <td scope="col"><%= link_to give_person.give_person,give_person_path(give_person)%></td>
+            <td scope="col"><%= give_person.involvement %></td>
+            <td scope="col"><%= give_person.created_at.to_s(:datetime_jp)%></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+      <p><%= link_to "ホームへ戻る", root_path ,class: "btn btn-secondary"%></p>
+    </div>
+  </div>
+</div>
