--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,22 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-6 mx-auto">
+      <h3>プロフィール</h3>
+      <%= form_with model: @user do |f| %>
+      <div class="form-group">
+        <%= f.label :name ,"名前" %><span class="badge badge-danger">必須</span><br>
+        <%= f.text_field :name , class: "form-control"%><br>
+      </div>
+      <div class="form-group">
+        <%= f.label :email ,"メールアドレス" %><span class="badge badge-danger">必須</span><br>
+        <%= f.text_field :email , class: "form-control" %><br>
+      </div>
+      <div class="form-group">
+        <%= f.label :image ,"プロフィール写真" %><br>
+        <%= f.file_field:image %>
+      </div>
+      <%= f.submit "更新" ,class: "btn btn-primary"%>
+      <% end %>
+    </div>
+  </div>
+</div>
