--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,2 +1,25 @@
-<h1>Genres#index</h1>
-<p>Find me in app/views/genres/index.html.erb</p>
+<h3>家族一覧</h3>
+<% if flash[:notice] %>
+<p class="notice"><%= flash[:notice] %></p>
+<% end %>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-auto mx-5">
+      <table class="table table-hover">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">分類</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @genres.each do |genre| %>
+          <tr>
+            <td scope="col"><%= link_to genre.genre,genre_path(genre)%></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+      <p><%= link_to "ホームへ戻る", root_path ,class: "btn btn-secondary"%></p>
+    </div>
+  </div>
+</div>
