--- a/app/views/give_items/new.html.erb
+++ b/app/views/give_items/new.html.erb
@@ -6,7 +6,7 @@
 
     <div class="row">
       <div class="col-100 mx-auto">
-        <h3>give_item登録</h3>
+        <i class="fas fa-gift fa-3x"> gift</i>
       </div>
     </div>
     <div class="row">
@@ -15,44 +15,90 @@
           <%= form_with model: @give_item,local: true do |f| %>
           <tr>
             <div class="form-group">
-
+              <th style="width: 30%"><i class="fa-solid fa-user"> presenter</i></th>
+              <th style="width: 5%">
+                <div class="badge badge-danger"> required</div>
+              </th>
+              <td style="width: 65%">
+                <%= f.collection_select :give_person_id, GivePerson.all, :id, :give_person, {include_blank: "選択して下さい"}, {class: "form-control input-sm"} %>
+              </td>
             </div>
           </tr>
           <tr>
-
+            <div class="form-group">
+              <th style="width: 30%"><i class="far fa-user"> family</th>
+              <th style="width: 5%">
+                <div class="badge badge-danger"> required</div>
+              </th>
+              <td style="width: 65%">
+                <%= f.collection_select :family_person_id, FamilyPerson.all, :id, :family_person,{include_blank: "選択して下さい"}, {class: "form-control input-sm"} %>
+              </td>
+            </div>
+          </tr>
+          <tr>
+            <div class="form-group">
+              <th style="width: 30%"><i class="fas fa-layer-group"> genre</th>
+              <th style="width: 5%">
+                <div class="badge badge-danger"> required</div>
+              </th>
+              <td style="width: 65%">
+                <%= f.collection_select :genre_id, Genre.all, :id, :genre,{include_blank: "選択して下さい"}, {class: "form-control input-sm"} %>
+              </td>
+            </div>
           </tr>
           <div class="form-group">
-            <th><%= f.label :product ,"アイテム名" %><span class="badge badge-danger">必須</span></th>
-            <td><%= f.text_field :product , class: "form-control"%></td>
+            <th style="width: 30%"><i class="fas fa-gifts"> gift</i></th>
+            <th style="width: 5%">
+              <div class="badge badge-danger"> required</div>
+            </th>
+            <td style="width: 65%"><%= f.text_field :product , class: "form-control"%></td>
           </div>
           </tr>
           <tr>
             <div class="form-group">
-              <th><%= f.label :reason ,"理由" %><span class="badge badge-danger">必須</span></th>
-              <td><%= f.text_field  :reason, class: "form-control"%></td>
+              <th style="width: 30%"><i class="far fa-comment-dots"> reason</i></th>
+              <th style="width: 5%">
+                <div class="badge badge-danger"> required</div>
+              </th>
+              <td style="width: 65%"><%= f.text_field  :reason, class: "form-control"%></td>
             </div>
           </tr>
           <tr>
             <div class="form-group">
-              <th><%= f.label :price ,"金額" %><span class="badge badge-danger">必須</span></th>
-              <td><%= f.number_field :price, class: "form-control" %></td>
+              <th style="width: 30%"><i class="far fa-money-bill-alt"> amount</i></th>
+              <th style="width: 5%">
+                <div class="badge badge-danger"> required</div>
+              </th>
+              <td style="width: 65%"><%= f.number_field :price, class: "form-control" %></td>
             </div>
           </tr>
           <tr>
             <div class="form-group">
-              <th><%= f.label :give_day ,"登録日" %><span class="badge badge-danger">必須</span></th>
-              <td><%= f.date_field :give_day, class: "form-control"%></td>
+              <th style="width: 30%"><i class="far fa-calendar-alt"> date</th>
+              <th style="width: 5%">
+                <div class="badge badge-danger"> required</div>
+              </th>
+              <td style="width: 65%"><%= f.date_field :give_day, class: "form-control"%></td>
             </div>
           </tr>
           <tr>
             <div class="form-group">
-              <th class="border-bottom"><%= f.label :image ,"写真" %><span class="badge badge-danger">必須</span></th>
-              <td class="border-bottom"><%= f.file_field:image %> </td>
+              <th style="width: 30%"><i class="fas fa-image"> photo</i></th>
+              <th style="width: 5%">
+                <div></div>
+              </th>
+              <td style="width: 65%"><%= f.file_field:image %> </td>
             </div>
           </tr>
         </table>
-        <p class="mt-3"><%= f.submit "登録完了" ,class: "btn btn-primary"%></p>
-        <%= link_to "ホームへ戻る", root_path ,class: "btn btn-secondary"%>
+        <p class="mt-3">
+          <%= f.button :type => "submit", class: "btn btn-primary rounded-pill" do %>
+          <i class="far fa-check-circle"> save</i>
+          <% end %>
+          <%= link_to root_path, class: "btn btn-secondary rounded-pill" do %>
+          <i class="fas fa-home"> home</i>
+          <% end %>
+        </p>
         <% end %>
       </div>
     </div>
