--- a/app/views/give_persons/index.html.erb
+++ b/app/views/give_persons/index.html.erb
@@ -1,5 +1,4 @@
-<h3>アイテム情報一覧</h3>
-<%binding.pry%>
+<h3>くれた人一覧</h3>
 <% if flash[:notice] %>
 <p class="notice"><%= flash[:notice] %></p>
 <% end %>
@@ -19,12 +18,16 @@
           <tr>
             <td scope="col"><%= link_to give_person.give_person,give_person_path(give_person)%></td>
             <td scope="col"><%= give_person.involvement %></td>
-            <td scope="col"><%= give_person.created_at.to_s(:datetime_jp)%></td>
+            <td scope="col"><%= give_person.created_at.to_s(:date_jp)%></td>
           </tr>
           <% end %>
         </tbody>
       </table>
-      <p><%= link_to "ホームへ戻る", root_path ,class: "btn btn-secondary"%></p>
+      <p><%= link_to  root_path, class: 'btn btn-default' do %>
+        <i class="fas fa-arrow-circle-left"></i>
+        <span>戻る</span>
+        <% end %>
+      </p>
     </div>
   </div>
 </div>
