--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,16 +16,16 @@
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
   </script>
 
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag 'application' %>
+  <%= javascript_pack_tag 'application' %>
 </head>
 
 <header>
   <% if user_signed_in? %>
-  <div class="d-flex justify-content-start bg-info mb-2">
+  <div class="d-flex justify-content-start mb-2">
     <div class="ml-auto">
       <div class="dropdown">
-        <i class="fa-regular fa-user"></i> <%= current_user.name %>
+        <i class="fas fa-child"></i> <%= current_user.name %>
         <button id="btnOpenMenu" class="btn btn-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
           aria-expanded="true">
           <% if current_user.image? %>
@@ -66,14 +66,7 @@
 <% if flash[:alert] %>
 <div class="alert alert-danger" role="alert"><strong><%= alert %></strong></div>
 <% end %>
-
 <%= yield %>
-
 </body>
-</div>
-<div class="mt-5 ">
-  <footer>
-    <h5>potepan</h5>
-  </footer>
 
 </html>
