--- a/app/views/give_items/new.html.erb
+++ b/app/views/give_items/new.html.erb
@@ -15,6 +15,15 @@
           <%= form_with model: @give_item,local: true do |f| %>
           <tr>
             <div class="form-group">
+              <th style="width: 30%"><i class="fas fa-gifts"> gift</i></th>
+              <th style="width: 5%">
+                <div class="badge badge-danger"> required</div>
+              </th>
+              <td style="width: 65%"><%= f.text_field :product , class: "form-control"%></td>
+            </div>
+          </tr>
+          <tr>
+            <div class="form-group">
               <th style="width: 30%"><i class="fa-solid fa-user"> presenter</i></th>
               <th style="width: 5%">
                 <div class="badge badge-danger"> required</div>
@@ -46,13 +55,14 @@
               </td>
             </div>
           </tr>
-          <div class="form-group">
-            <th style="width: 30%"><i class="fas fa-gifts"> gift</i></th>
-            <th style="width: 5%">
-              <div class="badge badge-danger"> required</div>
-            </th>
-            <td style="width: 65%"><%= f.text_field :product , class: "form-control"%></td>
-          </div>
+          <tr>
+            <div class="form-group">
+              <th style="width: 30%"><i class="far fa-money-bill-alt"> amount</i></th>
+              <th style="width: 5%">
+                <div class="badge badge-danger"> required</div>
+              </th>
+              <td style="width: 65%"><%= f.number_field :price, class: "form-control" %></td>
+            </div>
           </tr>
           <tr>
             <div class="form-group">
@@ -65,11 +75,11 @@
           </tr>
           <tr>
             <div class="form-group">
-              <th style="width: 30%"><i class="far fa-money-bill-alt"> amount</i></th>
+              <th style="width: 30%"><i class="far fa-file-alt"> text</i></th>
               <th style="width: 5%">
-                <div class="badge badge-danger"> required</div>
+                <div></div>
               </th>
-              <td style="width: 65%"><%= f.number_field :price, class: "form-control" %></td>
+              <td style="width: 65%"><%= f.text_field  :introduction, class: "form-control"%></td>
             </div>
           </tr>
           <tr>
