--- a/app/views/give_items/index.html.erb
+++ b/app/views/give_items/index.html.erb
@@ -1,8 +1,15 @@
-<div class="container mt-7">
+<div class="container">
   <div class="row">
-    <div class="col-auto mx-7">
+    <div class="col-auto">
       <h3><i class="fas fa-gifts"> gift index</i></h3>
     </div>
+  </div>
+  <div class="text-right">
+    <p>
+      <%= link_to new_give_item_path, class: "btn btn-outline-warning rounded-pill", method: :get do %>
+      <i class="fas fa-gift"> new</i>
+      <% end %>
+    </p>
   </div>
 </div>
 <% if flash[:notice] %>
@@ -10,59 +17,78 @@
 <% end %>
 <div class="container">
   <div class="row">
-    <div class="col-auto">
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            <th><i class="fas fa-gifts"> gift</i></th>
-            <th><i class="fa-solid fa-user"> : from</i></th>
-            <th><i class="far fa-user"> : to</i></th>
-            <th><i class="far fa-money-bill-alt"> amount</i></th>
-            <th><i class="far fa-comment-dots"> reason</i></th>
-            <th><i class="far fa-calendar-alt"> date</i></th>
-            <th><i class="fas fa-reply"></i><i class="fas fa-gift"> return item</i></th>
-            <th></th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @give_items.each do |give_item| %>
-          <tr>
-            <td><%= link_to give_item.product,give_item_path(give_item)%></td>
-            <td><%= give_item.give_person.give_person %></td>
-            <td><%= give_item.family_person.family_person %></td>
-            <td><%= give_item.price %></td>
-            <td><%= give_item.reason %></td>
-            <td><%= give_item.give_day %></td>
-            <td>
-              <%  give_item %>
-              <p>インスタンスメソッド作って対応</p>
-
-              <%= link_to new_give_return_path(give_item), class: "btn btn-outline-warning rounded-pill", method: :get do %>
-
-              <i class="fas fa-gift"> return item</i>
-              <% end %>
-            <td>
-              <%= link_to edit_give_item_path(give_item),class: "btn btn-outline-primary, rounded-circle btn-lg", method: :get do %>
-              <i class="far fa-edit"></i>
-              <% end %></td>
-            </td>
-            <td>
-              <%= link_to give_item_path(give_item),class: "btn btn-danger rounded-circle btn-lg", method: :delete, data: { confirm: "本当に削除しますか？" } do %>
-              <i class="far fa-trash-alt fa-1x"></i>
-              <% end %></td>
-          </tr>
+    <div class="col">
+      <div class="d-grid gap-3">
+        <table class="table table-hover">
+          <% @give_items.each_with_index do |give_item,i| %>
+          <thead>
+            <tr>
+              <th class="table-warning">ITEM No. <%=i+1%></th>
+              <td class="table-warning"></td>
+            </tr>
+            <tr>
+              <th><i class="fas fa-gifts"> gift</i></th>
+              <td><%= link_to give_item.product,give_item_path(give_item)%></td>
+            </tr>
+            <tr>
+              <th><i class="fa-solid fa-user"> : from</i></th>
+              <td><%= give_item.give_person.give_person %></td>
+            </tr>
+            <tr>
+              <th><i class="far fa-user"> : to</i></th>
+              <td><%= give_item.family_person.family_person %></td>
+            </tr>
+            <tr>
+              <th><i class="far fa-money-bill-alt"> amount</i></th>
+              <td><%= give_item.price %></td>
+            </tr>
+            <tr>
+              <th><i class="far fa-comment-dots"> reason</i></th>
+              <td><%= give_item.reason %></td>
+            </tr>
+            <tr>
+              <th><i class="far fa-calendar-alt"> date</i></th>
+              <td><%= give_item.give_day %></td>
+            </tr>
+            <tr>
+              <th><i class="fas fa-reply"></i><i class="fas fa-gift"> return item</i></th>
+              <td>
+                <% if give_item.have_return? %>
+                <%= link_to give_item.give_returns[0].product,give_return_path(give_item.give_returns[0]) %>
+                <% else %>
+                <%= link_to new_give_return_path(give_item), class: "btn btn-outline-warning rounded-pill", method: :get do %>
+                <i class="fas fa-gift"> return item</i>
+                <% end %>
+                <% end %>
+              </td>
+            </tr>
+            <tr>
+              <th><i class="fas fa-reply"></i><i class="far fa-money-bill-alt"> return amount</i></th>
+              <td>
+                <% if give_item.have_return? %>
+                <%= give_item.give_returns[0].price %>
+                <% end %>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <%= link_to edit_give_item_path(give_item),class: "btn btn-outline-primary, rounded-circle btn-lg", method: :get do %>
+                <i class="far fa-edit"></i>
+                <% end %></td>
+              </td>
+              <td>
+                <%= link_to give_item_path(give_item),class: "btn btn-danger rounded-circle btn-lg", method: :delete, data: { confirm: "本当に削除しますか？" } do %>
+                <i class="far fa-trash-alt fa-1x"></i>
+                <% end %></td>
+            </tr>
+            <% end %>
+        </table>
+        <p><%= link_to  root_path, class: "btn btn-default rounded-pill" do %>
+          <i class="fas fa-arrow-circle-left"></i>
+          <span>back</span>
           <% end %>
-        </tbody>
-      </table>
-      <p><%= link_to  root_path, class: "btn btn-default rounded-pill" do %>
-        <i class="fas fa-arrow-circle-left"></i>
-        <span>back</span>
-        <% end %>
-        <%= link_to new_give_item_path, class: "btn btn-outline-warning rounded-pill", method: :get do %>
-        <i class="fas fa-gift"> register</i>
-        <% end %>
-      </p>
+        </p>
+      </div>
     </div>
   </div>
 </div>
