--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,9 +34,9 @@
           <%= image_tag "/assets/default.png", class: "icon_image" %>
           <% end %>
         </button>
-        <ul class="dropdown-menu " aria-labelledby="btnOpenMenu">
+        <ul class="dropdown-menu" aria-labelledby="btnOpenMenu">
           <li>
-            <a class="dropdown-item" href="#"><%= link_to '設定', user_path(current_user), class: "nav-link"%></a>
+            <a class="dropdown-item" href="#"><%= link_to "設定", user_path(current_user), class: "nav-link"%></a>
           </li>
           <li>
             <a class="dropdown-item"
