--- a/app/views/give_persons/new.html.erb
+++ b/app/views/give_persons/new.html.erb
@@ -13,21 +13,33 @@
       <div class="col-100 mx-auto">
         <table class="thead-dark">
           <%= form_with model: @give_person, url: {controller: 'give_persons', action: 'create' }, local: true do |f| %>
-          </tr>
-          <div class="form-group">
-            <th><%= f.label :give_person ,"くれた人" %><span class="badge badge-danger">必須</span></th>
-            <td><%= f.text_field :give_person , class: "form-control"%></td>
-          </div>
+          <tr>
+            <div class="form-group">
+              <th style="width: 40%"><i class="fa-solid fa-user">　presenter</th>
+              <th style="width: 5%">
+                <div class="badge badge-danger"> required</div>
+              </th>
+              <td style="width: 55%"><%= f.text_field :give_person, class: "form-control"%></td>
+            </div>
           </tr>
           <tr>
             <div class="form-group">
-              <th><%= f.label :involvement ,"つながり" %><span class="badge badge-danger">必須</span></th>
-              <td><%= f.text_field  :involvement, class: "form-control"%></td>
+              <th style="width: 40%"><i class="far fa-handshake"> Connection</i></th>
+              <th style="width: 5%">
+                <div class="badge badge-danger"> required</div>
+              </th>
+              <td style="width: 55%"><%= f.text_field :involvement, class: "form-control"%></td>
             </div>
           </tr>
         </table>
-        <p class="mt-3"><%= f.submit "登録完了" ,class: "btn btn-primary"%></p>
-        <%= link_to "ホームへ戻る", root_path ,class: "btn btn-secondary"%>
+        <p class="mt-3">
+          <%= f.button :type => "submit", class: "btn btn-primary rounded-pill" do %>
+          <i class="far fa-check-circle"> save</i>
+          <% end %>
+          <%= link_to root_path, class: "btn btn-secondary rounded-pill" do %>
+          <i class="fas fa-home"> home</i>
+          <% end %>
+        </p>
         <% end %>
       </div>
     </div>
