--- a/app/assets/stylesheets/give_items.scss
+++ b/app/assets/stylesheets/give_items.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the GiveItems controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.money_image {
+    width: 150px;
+    height: 150px;
+    border-radius: 75px;
+    object-fit: cover;
+}
