--- a/app/views/give_items/_form.html.erb
+++ b/app/views/give_items/_form.html.erb
@@ -1,104 +1,104 @@
-    <div class="row">
-      <div class="col-100 mx-auto">
-        <table class="thead-dark">
-          <%= form_with model: @give_item,local: true do |f| %>
-          <tr class="mb-5">
-            <div class="form-group">
-              <th style="width: 30%"><i class="fas fa-gifts"> gift</i></th>
-              <th style="width: 5%">
-                <div class="badge badge-danger"> required</div>
-              </th>
-              <td style="width: 65%"><%= f.text_field :product , class: "form-control"%></td>
-            </div>
-          </tr>
-          <tr>
-            <div class="form-group">
-              <th style="width: 30%"><i class="fa-solid fa-user"> presenter</i></th>
-              <th style="width: 5%">
-                <div class="badge badge-danger"> required</div>
-              </th>
-              <td style="width: 65%">
-                <%= f.collection_select :give_person_id, GivePerson.all, :id, :give_person, {include_blank: "選択して下さい"}, {class: "form-control input-sm"} %>
-              </td>
-            </div>
-          </tr>
-          <tr>
-            <div class="form-group">
-              <th style="width: 30%"><i class="far fa-user"> family</th>
-              <th style="width: 5%">
-                <div class="badge badge-danger"> required</div>
-              </th>
-              <td style="width: 65%">
-                <%= f.collection_select :family_person_id, FamilyPerson.all, :id, :family_person,{include_blank: "選択して下さい"}, {class: "form-control input-sm"} %>
-              </td>
-            </div>
-          </tr>
-          <tr>
-            <div class="form-group">
-              <th style="width: 30%"><i class="fas fa-layer-group"> genre</th>
-              <th style="width: 5%">
-                <div class="badge badge-danger"> required</div>
-              </th>
-              <td style="width: 65%">
-                <%= f.collection_select :genre_id, Genre.all, :id, :genre,{include_blank: "選択して下さい"}, {class: "form-control input-sm"} %>
-              </td>
-            </div>
-          </tr>
-          <tr>
-            <div class="form-group">
-              <th style="width: 30%"><i class="far fa-money-bill-alt"> amount</i></th>
-              <th style="width: 5%">
-                <div class="badge badge-danger"> required</div>
-              </th>
-              <td style="width: 65%"><%= f.number_field :price, class: "form-control" %></td>
-            </div>
-          </tr>
-          <tr>
-            <div class="form-group">
-              <th style="width: 30%"><i class="far fa-comment-dots"> reason</i></th>
-              <th style="width: 5%">
-                <div class="badge badge-danger"> required</div>
-              </th>
-              <td style="width: 65%"><%= f.text_field  :reason, class: "form-control"%></td>
-            </div>
-          </tr>
-          <tr>
-            <div class="form-group">
-              <th style="width: 30%"><i class="far fa-file-alt"> text</i></th>
-              <th style="width: 5%">
-                <div></div>
-              </th>
-              <td style="width: 65%"><%= f.text_field  :introduction, class: "form-control"%></td>
-            </div>
-          </tr>
-          <tr>
-            <div class="form-group">
-              <th style="width: 30%"><i class="far fa-calendar-alt"> date</th>
-              <th style="width: 5%">
-                <div class="badge badge-danger"> required</div>
-              </th>
-              <td style="width: 65%"><%= f.date_field :give_day, class: "form-control"%></td>
-            </div>
-          </tr>
-          <tr>
-            <div class="form-group">
-              <th style="width: 30%"><i class="fas fa-image"> photo</i></th>
-              <th style="width: 5%">
-                <div></div>
-              </th>
-              <td style="width: 65%"><%= f.file_field:image %> </td>
-            </div>
-          </tr>
-        </table>
-        <p class="mt-3">
-          <%= f.button :type => "submit", class: "btn btn-primary rounded-pill" do %>
-          <i class="far fa-check-circle"> save</i>
-          <% end %>
-          <%= link_to root_path, class: "btn btn-secondary rounded-pill" do %>
-          <i class="fas fa-home"> home</i>
-          <% end %>
-        </p>
-        <% end %>
-      </div>
-    </div>
-    </div>
+<div class="row">
+  <div class="col-100 mx-auto">
+    <table class="thead-dark">
+      <%= form_with model: @give_item,local: true do |f| %>
+      <tr class="mb-5">
+        <div class="form-group">
+          <th style="width: 30%"><i class="fas fa-gifts"> gift</i></th>
+          <th style="width: 5%">
+            <div class="badge badge-danger"> required</div>
+          </th>
+          <td style="width: 65%"><%= f.text_field :product , class: "form-control"%></td>
+        </div>
+      </tr>
+      <tr>
+        <div class="form-group">
+          <th style="width: 30%"><i class="fa-solid fa-user"> presenter</i></th>
+          <th style="width: 5%">
+            <div class="badge badge-danger"> required</div>
+          </th>
+          <td style="width: 65%">
+            <%= f.collection_select :give_person_id, GivePerson.all, :id, :give_person, {include_blank: "選択して下さい"}, {class: "form-control input-sm"} %>
+          </td>
+        </div>
+      </tr>
+      <tr>
+        <div class="form-group">
+          <th style="width: 30%"><i class="far fa-user"> family</th>
+          <th style="width: 5%">
+            <div class="badge badge-danger"> required</div>
+          </th>
+          <td style="width: 65%">
+            <%= f.collection_select :family_person_id, FamilyPerson.all, :id, :family_person,{include_blank: "選択して下さい"}, {class: "form-control input-sm"} %>
+          </td>
+        </div>
+      </tr>
+      <tr>
+        <div class="form-group">
+          <th style="width: 30%"><i class="fas fa-layer-group"> genre</i></th>
+          <th style="width: 5%">
+            <div class="badge badge-danger"> required</div>
+          </th>
+          <td style="width: 65%">
+            <%= f.collection_select :genre_id, Genre.all, :id, :genre,{include_blank: "選択して下さい"}, {class: "form-control input-sm"} %>
+          </td>
+        </div>
+      </tr>
+      <tr>
+        <div class="form-group">
+          <th style="width: 30%"><i class="far fa-money-bill-alt"> amount</i></th>
+          <th style="width: 5%">
+            <div class="badge badge-danger"> required</div>
+          </th>
+          <td style="width: 65%"><%= f.number_field :price, class: "form-control" %></td>
+        </div>
+      </tr>
+      <tr>
+        <div class="form-group">
+          <th style="width: 30%"><i class="far fa-comment-dots"> reason</i></th>
+          <th style="width: 5%">
+            <div class="badge badge-danger"> required</div>
+          </th>
+          <td style="width: 65%"><%= f.text_field  :reason, class: "form-control"%></td>
+        </div>
+      </tr>
+      <tr>
+        <div class="form-group">
+          <th style="width: 30%"><i class="far fa-file-alt"> text</i></th>
+          <th style="width: 5%">
+            <div></div>
+          </th>
+          <td style="width: 65%"><%= f.text_field  :introduction, class: "form-control"%></td>
+        </div>
+      </tr>
+      <tr>
+        <div class="form-group">
+          <th style="width: 30%"><i class="far fa-calendar-alt"> date</th>
+          <th style="width: 5%">
+            <div class="badge badge-danger"> required</div>
+          </th>
+          <td style="width: 65%"><%= f.date_field :give_day, class: "form-control"%></td>
+        </div>
+      </tr>
+      <tr>
+        <div class="form-group">
+          <th style="width: 30%"><i class="fas fa-image"> photo</i></th>
+          <th style="width: 5%">
+            <div></div>
+          </th>
+          <td style="width: 65%"><%= f.file_field:image %> </td>
+        </div>
+      </tr>
+    </table>
+    <p class="mt-3">
+      <%= f.button :type => "submit", class: "btn btn-primary rounded-pill" do %>
+      <i class="far fa-check-circle"> save</i>
+      <% end %>
+      <%= link_to root_path, class: "btn btn-secondary rounded-pill" do %>
+      <i class="fas fa-home"> home</i>
+      <% end %>
+    </p>
+    <% end %>
+  </div>
+</div>
+</div>
