--- a/app/views/give_items/edit.html.erb
+++ b/app/views/give_items/edit.html.erb
@@ -1,12 +1,11 @@
-<div class="container mt-5">
-  <#%= render "shared/error" ,obj: @give_item %>
-    <% if flash.now[:notice] %>
-    <p class="notice"><%= flash.now[:notice] %></p>
-    <% end %>
+<div class="container">
+  <div class="row">
 
-    <div class="row">
-      <div class="col-100 mx-auto">
-        <h3>give_item edit</h3>
-      </div>
-    </div>
-    <%= render "give_items/form" %>
+    <#%= render "shared/error" ,obj: @give_item %>
+      <% if flash.now[:notice] %>
+      <p class="notice"><%= flash.now[:notice] %></p>
+      <% end %>
+      <h3>give_item edit</h3>
+  </div>
+</div>
+<%= render "give_items/form" %>
