--- a/app/views/give_items/show.html.erb
+++ b/app/views/give_items/show.html.erb
@@ -1,50 +1,111 @@
-<h3>アイテム詳細</h3>
+<div class="container mb-5">
+  <i class="fas fa-search-plus fa-4x"> detail</i>
+</div>
 <div class="container">
   <div class="row">
     <div class="col-md-6">
       <table>
         <tr>
+          <th>
+            <div class="m-3">
+              <i class="fas fa-child"> Registered person</i>
+            </div>
+          </th>
+        </tr>
+        <tr>
           <td>
-            <% if @give_item.image? %>
-            <%= image_tag @give_item.iamge.url %>
-            <% end %>
+            <div class="mx-3">
+              <% if @give_item.user.image? %>
+              <img src=<%= @give_item.user.image %> class="icon_image">
+              <% else %>
+              <%= image_tag "/assets/default.png", class: "icon_image" %>
+              <% end %>
+              <%= @give_item.user.name %>
+            </div>
           </td>
         </tr>
         <tr>
           <td>
-            <% if @give_item.user.image? %>
-            <img src=<%= @give_item.user.image %> class="icon_image">
-            <% else %>
-            <%= image_tag "/assets/default.png", class: "icon_image" %>
-            <% end %> %>
+            <div class="m-5">
+              <% if @give_item.image? %>
+              <%= image_tag @give_item.iamge.url %>
+              <% elsif @give_item.genre.genre == "お金" %>
+              <%= image_tag "/assets/money001.png", class: "money_image" %>
+              <% end %>
+            </div>
           </td>
-        </tr>
-        <tr>
-          <td class="border-bottom"><%= @give_item.product %></td><br>
-          <td class="border-bottom"><%= @give_item.price%></td>
-        </tr>
-        <tr>
-          <td><%= @give_item.introduction %></td>
         </tr>
       </table>
     </div>
-    <div class="col-md-6">
-      <p><%= "1日あたり  ¥#{@give_item.price} / 日" %></p><br>
-      <%#= form_with model: @reservation, url:new_reservation_path, method: :get ,local: true do |reserv| %>
-      <div class="form-group">
-        <%#= reserv.label :start_day ,"開始日"  %><span class="badge badge-danger">必須</span><br>
-        <%#= reserv.date_field :start_day , class: "form-control" %><br>
-        <%#= reserv.label :end_day ,"終了日" %><span class="badge badge-danger">必須</span><br>
-        <%#= reserv.date_field :end_day , class: "form-control"%><br>
-        <%#= reserv.label :customer,"人数" %><span class="badge badge-danger">必須</span><br>
-        <%#= reserv.number_field :customer, min: 1 , class: "form-control" %><br>
-        <%#= reserv.hidden_field :item_id, value: @give_item.id %>
-        <%#= reserv.hidden_field :user_id, value: current_user.id %>
-        <p><%#= reserv.submit "予約を確認する" ,class: "btn btn-primary"%></p>
-        <%= link_to "ホームへ戻る", root_path ,class: "btn btn-secondary"%>
-        <%# end %>
+    <div class="col-6">
+      <div class="mt-3 table-hover">
+        <table>
+          <tr>
+            <th class="border-bottom style=width 50%"><i class="fas fa-gifts"> gift</i></th>
+            <td class="border-bottom"><%= @give_item.product%></td>
+          </tr>
+          <tr>
+            <th class="border-bottom"><i class="fa-solid fa-user"> presenter</i></th>
+            <td class="border-bottom"><%= @give_item.give_person.give_person %></td>
+          </tr>
+          <tr>
+            <th class="border-bottom"><i class="far fa-user"> family</i></th>
+            <td class="border-bottom"><%= @give_item.family_person.family_person %></td>
+          </tr>
+          <tr>
+            <th class="border-bottom"><i class="fas fa-layer-group"> genre</i></th>
+            <td class="border-bottom"><%= @give_item.genre.genre %></td>
+          </tr>
+          <tr>
+            <th class="border-bottom"><i class="far fa-money-bill-alt"> amount</i></th>
+            <td class="border-bottom"><%= @give_item.price %></td>
+          </tr>
+          <tr>
+            <th class="border-bottom"><i class="far fa-comment-dots"> reason</i></th>
+            <td class="border-bottom"><%= @give_item.reason %></td>
+          </tr>
+          <tr>
+            <th class="border-bottom"><i class="far fa-file-alt"> text</i>
+            <td class="border-bottom"><%= @give_item.introduction %></td>
+          </tr>
+          <tr>
+            <th class="border-bottom"><i class="far fa-calendar-alt"> Present date</i></th>
+            <td class="border-bottom"><%= @give_item.give_day %></td>
+          </tr>
+          <tr>
+            <th class="border-bottom"><i class="fas fa-reply"></i><i class="fas fa-gift"> return item</i></th>
+            <td class="border-bottom">
+              <% if @give_item.have_return? %>
+              <%= @give_item.give_returns[0].product %>
+              <% else %>
+              <p>no return item</p>
+              <% end %>
+            </td>
+          </tr>
+          <tr>
+            <th class="border-bottom"><i class="fas fa-reply"></i><i class="far fa-money-bill-alt"> return amount</i>
+            </th>
+            <td class="border-bottom">
+              <% if @give_item.have_return? %>
+              <%= @give_item.give_returns[0].price %>
+              <% else %>
+              <p>no return amount</p>
+              <% end %>
+            </td>
+          </tr>
+        </table>
       </div>
     </div>
+    <div class="container">
+      <p>
+        <%= link_to  give_items_path, class: "btn btn-default rounded-pill" do %>
+        <i class="fas fa-arrow-circle-left"></i>
+        <span>back</span>
+        <% end %>
+        <%= link_to root_path, class: "btn btn-secondary rounded-pill" do %>
+        <i class="fas fa-home"> home</i>
+        <% end %>
+      </p>
+    </div>
   </div>
-  #(:give_people_id, :iregistration_date, :reason, :introduction, :item_name, :user_id, :item_price, :item_genre_id,
-  :item_image)
+</div>
