--- a/app/views/give_persons/new.html.erb
+++ b/app/views/give_persons/new.html.erb
@@ -1,46 +1,40 @@
-<div class="container mt-5">
-  <#%= render "shared/error" ,obj: @give_person %>
-    <% if flash.now[:notice] %>
-    <p class="notice"><%= flash.now[:notice] %></p>
-    <% end %>
-
-    <div class="row">
-      <div class="col-100 mx-auto">
-        <h3>くれた人登録</h3>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-100 mx-auto">
-        <table class="thead-dark">
-          <%= form_with model: @give_person, url: {controller: 'give_persons', action: 'create' }, local: true do |f| %>
-          <tr>
-            <div class="form-group">
-              <th style="width: 40%"><i class="fa-solid fa-user">　presenter</th>
-              <th style="width: 5%">
-                <div class="badge badge-danger"> required</div>
-              </th>
-              <td style="width: 55%"><%= f.text_field :give_person, class: "form-control"%></td>
-            </div>
-          </tr>
-          <tr>
-            <div class="form-group">
-              <th style="width: 40%"><i class="far fa-handshake"> Connection</i></th>
-              <th style="width: 5%">
-                <div class="badge badge-danger"> required</div>
-              </th>
-              <td style="width: 55%"><%= f.text_field :involvement, class: "form-control"%></td>
-            </div>
-          </tr>
-        </table>
-        <p class="mt-3">
-          <%= f.button :type => "submit", class: "btn btn-primary rounded-pill" do %>
-          <i class="far fa-check-circle"> save</i>
-          <% end %>
-          <%= link_to root_path, class: "btn btn-secondary rounded-pill" do %>
-          <i class="fas fa-home"> home</i>
-          <% end %>
-        </p>
+<div class="container mb-5">
+  <i class="fa-solid fa-user" fa-4x"> presenter</i>
+</div>
+<div class="row">
+  <div class="col-100 mx-auto">
+    <table class="thead-dark">
+      <%= form_with model: @give_person, url: {controller: 'give_persons', action: 'create' }, local: true do |f| %>
+      <tr>
+        <div class="form-group">
+          <th style="width: 40%"><i class="fa-solid fa-user">　presenter</th>
+          <th style="width: 5%">
+            <div class="badge badge-danger"> required</div>
+          </th>
+          <td style="width: 55%"><%= f.text_field :give_person, class: "form-control"%></td>
+        </div>
+      </tr>
+      <tr>
+        <div class="form-group">
+          <th style="width: 40%"><i class="far fa-handshake"> Connection</i></th>
+          <th style="width: 5%">
+            <div class="badge badge-danger"> required</div>
+          </th>
+          <td style="width: 55%"><%= f.text_field :involvement, class: "form-control"%></td>
+        </div>
+      </tr>
+    </table>
+    <div>
+      <p class="mt-5">
+        <%= f.button :type => "submit", class: "btn btn-primary rounded-pill" do %>
+        <i class="far fa-check-circle"> save</i>
         <% end %>
-      </div>
+        <%= link_to root_path, class: "btn btn-secondary rounded-pill" do %>
+        <i class="fas fa-home"> home</i>
+        <% end %>
+      </p>
     </div>
+    <% end %>
+  </div>
+</div>
 </div>
