--- a/app/views/give_items/new.html.erb
+++ b/app/views/give_items/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container">
   <#%= render "shared/error" ,obj: @give_item %>
     <% if flash.now[:notice] %>
     <p class="notice"><%= flash.now[:notice] %></p>
